Frontend/src/pages/project/detail/Detail.module.css
.backButton {
	button {
		display: flex;
		align-items: center;
	}

	img {
		margin-right: 15px;
	}
}

.subject {
	img {
		margin-right: 0px;
	}
}

.paperBg {
	width: 80dvw;
	margin: 0 auto 5rem;
	padding: 5vw;
}

.paperBg::before {
	border-radius: 8px;
}

.ctxDetail {
	width: 90%;
	margin: 0 auto;
}

.titleText {
	display: flex;
	flex-direction: column;

	h1 {
		margin-top: 32px;
		margin-bottom: 8px;
	}

	> div {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		align-items: center;
		flex-wrap: wrap;
		gap: 8px;
	}

	.name {
		display: flex;
		flex-wrap: wrap;
	}

	.subject {
		display: flex;
		align-items: center;
		gap: 8px;

		img {
			width: 30px;
		}
	}
}

.promoterTitle {
	margin-bottom: -20px;
}

.description {
	margin: 0;
	margin-top: 16px;

	p {
		text-align: left;
	}
}

.imgDiv {
	img {
		width: 100%;
		outline: 6px solid var(--bg-shift-primary);
		border-radius: 6px;
	}
}

.studentCardDiv {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	gap: 16px;
}

.studentCards {
	background-color: var(--bg-shift-primary);
	border: 5px solid black;
	border-radius: 10px;
	padding: 25px;
	flex: 1 1 300px;
	display: flex;
	flex-wrap: wrap;
	align-items: flex-start;
	box-sizing: border-box;
	max-width: 810px;
}

.studentTop,
.studentInfo {
	display: contents;
}

.picture {
	flex: 0 0 auto;
	margin-right: 20px;
	align-self: center;

	img {
		width: 128px;
		height: 128px;
		border-radius: 50%;
		border: 4px solid var(--bg-shift-secondary);
		background-color: var(--bg-shift-secondary);
		object-fit: cover;
	}
}

.studentName {
	flex: 1;
	min-width: 0;
}

.studentContact {
	display: flex;
	flex-wrap: nowrap;
	justify-content: space-between;
	align-items: center;
	gap: 16px;
	flex: 0 0 100%;
	margin-top: 12px;

	.icons {
		display: flex;
		gap: 16px;
		align-items: center;
	}
}

.magButton {
	button {
		display: flex;
		align-items: center;
		font-size: 15pt;
	}

	img {
		margin-right: 15px;
		width: 25px;
	}
}

.videoHolder {
	display: flex;
	flex-direction: column;
	align-items: center;
	margin-bottom: 33px;
}

.videoWrapper {
	width: 100%;
	aspect-ratio: 16 / 9;

	iframe {
		width: 100%;
		height: 100%;
		border: 3px solid var(--bg-shift-primary);
		border-radius: 6px;
		display: block;
	}
}

.videoThumb {
	position: relative;
	cursor: pointer;
	width: 100%;

	img.videoPlayer {
		width: 100%;
		aspect-ratio: 16 / 9;
		object-fit: cover;
		border: 3px solid var(--bg-shift-primary);
		border-radius: 6px;
		display: block;
	}

	.playBtn {
		position: absolute;
		top: 50%;
		left: 50%;
		transform: translate(-50%, -50%);
		width: 80px;
		pointer-events: none;
	}
}

.videoTitle {
	margin: 32px 0 16px 0;
}

@media (max-width: 1440px) {
	/* video */
	.videoWrapper,
	.videoThumb {
		width: 100%;
	}

	/* student cards */
	.picture img {
		width: 80px;
		height: 80px;
	}

	.magButton button {
		font-size: 12pt;
	}

	.studentContact {
		flex-wrap: wrap;
	}
}

@media (max-width: 768px) {
	.titleText {
		text-align: center;

		> div {
			flex-direction: column;
			align-items: center;
			gap: 0px;
		}

		p,
		img {
			margin: 0 0 16px 0;
		}

		.subject {
			justify-content: center;
		}
	}

	.magButton button {
		font-size: 0px;
		display: flex;
		justify-content: center;

		img {
			width: 40%;
			display: block;
			margin: 0;
		}
	}

	.description,
	.promoterTitle,
	.promoterName {
		text-align: center;
	}
}

